installr 0.22.1 (2019-08-16)
---------------------------

OTHER NOTES:
   * Appveyor integration added to the github repo

BUG FIXES:
   * Fix install.GraphicsMagick


installr 0.22.0 (2019-08-02)
---------------------------

OTHER NOTES:
   * Started using pkgdown :)

BUG FIXES:
   * Fix install.RStudio
   * Fix install.Rtools - force the user to choose a version to download
   * Make sure to DESCRIPTION of the package makes it clear that it is for Windows OS (and not, say Mac or Linux)


installr 0.21.3 (2019-06-09)
---------------------------

OTHER NOTES:
   * Added OS_type: windows

installr 0.21.2 (2019-06-09)
---------------------------

OTHER NOTES:
   * Updating dates.


installr 0.21.1 (2019-02-09)
---------------------------

BUG FIXES:
   * Fix install.MikTeX
   * Fix install.Rtools
   * Fix install.pandoc
   * Fix install.RStudio
   * Fix install.inno


installr 0.21.0 (2018-10-06)
---------------------------

NEW FUNCTIONS:
   * install.Java
   
UPDATED FUNCTIONS:
   * updated install.python() to check 32/64 bit Windows
   * updated install.conda() to set 32/64 bit Windows

BUG FIXES:
   * Fix install.Java() Documents
   * Fix install.ImageMagick()
   
   

installr 0.20.0 (2018-05-02)
---------------------------

NEW FUNCTIONS:
   * install.nodejs - Downloads and installs the latest version of nodejs LTS or Current for Windows.
   * is.x64 - Checks if the running OS is x64
   * install.conda - Miniconda is minimal version of anaconda for python.

BUG FIXES:
   * Fix install.ImageMagick()
   * Fix install.MikTeX
   * Fix myip


installr 0.19.0 (2017-04-21)
---------------------------

NEW FUNCTIONS:
   * install.inno - "Inno Setup is a free installer for Windows programs. First introduced in 1997, Inno Setup today rivals and even surpasses many commercial installers in feature set and stability."


BUG FIXES:
   * Fix install.Rtools()


OTHER NOTES:
   * Moved stringr to depends. R now must be >2.14



installr 0.18.1 (2016-11-11)