@@ -1,0 +1,4 @@
+library(testthat)
+library(installr)
+
+test_check("installr")
